--- a/Internship-backend/.env.example
+++ b/Internship-backend/.env.example
@@ -21,4 +21,5 @@ NODE_ENV=development
 # Admin Default Credentials (for initial setup)
 ADMIN_EMAIL=admin@college.edu
 ADMIN_PASSWORD=Admin@123
-
+EMAIL_USER=komalmhaske.2510@gmail.com
+EMAIL_PASS=lxqqugmnswlppoak
